[project]
name = "ultra-stream-controller-cloud-6ft"
version = "0.1.0"
description = "Scalable backend service for AI workloads"
requires-python = ">=3.10"
dependencies = ["fastapi", "pydantic", "httpx"]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy", "ruff"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
